# RotaryCharTransformer

./: .gitignore  Makefile  README.md  evaluate.py  evaluate_test.py  evaluate_test_supervised.py  model.py  model_baseline.py  model_rope.py  model_rope_trm.py  nb_eval_supervised.ipynb  nb_train_supervised.ipynb  prep_byte_level.py  pyproject.toml  requirements.txt  train.py  train_supervised.py  train_supervisedV2.py
config/: enwik8_char_nope.py  enwik8_char_nope_baseline.py  enwik8_char_rope.py  enwik8_char_rope_baseline.py  enwik8_char_rope_baselineV2.py  enwik8_char_rope_freq_50k.py  enwik8_char_rope_trm.py
data/enwik8/: prep_enwik8.py
data/enwik8_plus/: prepare.py
src/pipelines/: train.py  train_supervised.py
src/utils/: halting_loss.py
src/utils/data_utils/: prepare_dataset.py
src/utils/eval_utils/: loss_fn.py
src/utils/model_utilities/: model.py  model_baseline.py  model_rope.py  model_rope_trm.py  pick_model.py
src/utils/train_utils/: misc.py  muon.py
